Fixed department tree collapse issue.

--- a/blocks/iomad_company_admin/styles.css
+++ b/blocks/iomad_company_admin/styles.css
@@ -356,5 +356,5 @@ border-radius: 10px;
   
 .tree_dept_name {
     display: inline-block;
-    width: 100%;
+
 }
